ajout d'un notebook propre

--- a/nb_Val_clean.ipynb
+++ b/nb_Val_clean.ipynb
@@ -380,7 +380,7 @@
    "id": "540bd3b3",
    "metadata": {},
    "source": [
-    "### IID : Pascal VOC2007"
+    "# IID : Pascal VOC2007"
    ]
   },
   {
@@ -452,7 +452,7 @@
    "id": "208ba307",
    "metadata": {},
    "source": [
-    "### OOD: MS COCO 2014 non filtré"
+    "# OOD: MS COCO 2014 non filtré"
    ]
   },
   {
@@ -585,7 +585,7 @@
    "id": "6fdef717",
    "metadata": {},
    "source": [
-    "### MS COCO 2014 filtré"
+    "# MS COCO 2014 filtré"
    ]
   },
   {
